Character name pull

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
     </div>
   </div>
+     
+       <div class="info-container">
+         <div id="character-info">
+
+         </div>
+         <div id="comics">
+           <ul></ul>
+         </div>
+       </div>
   
 
 
