Added Character card to HTML

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     </div>
   </div>
      
-       <div class="info-container">
-         <div id="character-info">
-
-         </div>
+  <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Character</h5>
+        <p class="card-text"></p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
          <div id="comics">
            <ul></ul>
          </div>
