--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
   </div>
      
   <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="..." alt="Card image cap">
+      
       <div class="card-body">
-        <h5 class="card-title">Character</h5>
+        <h5 class="card-title"></h5>
+        <img class="card-img-top" src="">
         <p class="card-text"></p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
       </div>
     </div>
          <div id="comics">
