Testing data pull for 1 character

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
   <div class="card" style="width: 18rem;">
       
       <div class="card-body">
-        <h5 class="card-title"></h5>
-        <img class="card-img-top" src="">
-        <p class="card-text"></p>
+        <div id="character-title">
+            <h5</h5>
+        </div>
+        <div img id="character-image" src=""></div>
+        
+        <div id="character-description"></div>
         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
       </div>
     </div>
