Styled search bar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </nav>
 
   <form>
-      <input type="text" placeholder="Marvel Character"/>
-      <input type="submit" value="Character Info" />
+      <input type="text" placeholder="Search Marvel Characters"/>
+      <input type="submit" value="Character Info"/>
     </form>
   
   
