--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   
   
-    <div class="card">
+    <div class="card" style="width: 40rem;">
         
         <!-- <div class="card-body"> -->
             <!-- <h5 class="card-title"></h5>
