--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     <div class="search-bar">
   <form>
-      <input type="text" placeholder="Search Marvel Characters"/>
-      <input type="submit" value="Character Info"/>
+      <input type="text" placeholder="Ex. Spider-man, Wolverine, etc..."/>
+      <input type="submit" value="Character Info" class="btn btn-danger mb-2 float-right search-character-button"/>
     </form>
     </div>
   
