Changed character styling

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         <!-- </div> -->
     </div>
 
+    <div class="comic-section">
+      
+    </div>
+
  
     <!-- </div>
          <div id="comics">
